# dotfiles

./: .Xresources  .alacritty.dhall  .alacritty.old.toml  .alacritty.toml  .alacritty.yml  .aliasrc  .aliasrc.bash  .aliasrc.zsh  .audio_start  .audio_start.sh  .audio_stop.sh  .bash_zlua_patch  .bashrc  .commonrc  .condarc  .ctags  .emacs  .funcrc  .gitconfig  .gitignore  .gitmodules  .guile  .gvimrc  .haskeline  .i3status.conf  .ideavimrc  .inputrc  .kb-plug  .kb-plug.sh  .keynavrc  .keynavrc.gaming  .keynavrc.keyboard  .keynavrc.numpad  .kshrc  .megarc  .mkshrc  .mostrc  .nanorc  .ocamlformat  .p10k-droid.zsh  (+37 more)
.bash/: zlua_patch
.config/: mimeapps.list  weston.ini
.dscripts/: clip.sh  dclick.sh  dsel.sh  fop.sh  frem.sh  plumb.sh  sclicker.sh  scrshg.sh
.dwm/: acme-mode.sh  acme.commands  bar.sh  bat-linux.sh  cmus.commands  cmus.keys  cmus_info.sh  dbackup.sh  display-maker.sh  display.commands  display.user.commands  dispm.sh  dmount.sh  dremove.sh  drun.sh  kbd.sh  kmonad.sh  kmonads.sh  mocp.keys  mocp.sh  mocp_info.sh  mode.sh  mon_man  plumb.sh  ram usage.sh  scr1.sh  scr2.sh  scr3.sh  scr4.sh  scrshc.sh  scrshg.sh  starting_moves.sh  ststart.sh  suspend.sh  xcape_run.sh  xlock_select.sh
.elinks/: elinks.conf
.emacs.d/: config.el  dev.el  docs.el  editing.el  evil-keys.el  evil.el  files.el  init.el  keys.el  lisp.el  markup.el  math.el  my-functions.el  org.el  terminals.el
.moc/: .config.un~  config  config~  keymap  last_directory  (+1 more)
Templates/nix/pico/: CMakeLists.txt  picoSimpleFlake.nix
Templates/nix/pico/dual-setup/: default.nix  flake.nix
(+570 files in other folders)
